# football_robot

./: Cargo.toml  README.md  flake.nix
attack/: Cargo.toml
attack/src/: main.rs
goalie/: Cargo.toml
goalie/src/: dvd.rs  main.rs
lib/: Cargo.toml
lib/src/: color.rs  compass.rs  display.rs  ir.rs  lib.rs  location.rs  motors.rs  panic.rs  terminal.rs
tools/compass_calibration/: Cargo.toml
tools/compass_calibration/src/: main.rs
tools/i2c_detect/: Cargo.toml
tools/i2c_detect/src/: main.rs
tools/ir_calibrate/: Cargo.toml
tools/ir_calibrate/src/: main.rs
tools/ir_data_collect/: Cargo.toml
tools/ir_data_collect/src/: main.rs
tools/print_color/: Cargo.toml
tools/print_color/src/: main.rs
