[workspace]
resolver = "2"
members = [
    "goalie",
    "attack",
    "lib",
    "tools/i2c_detect",
    "tools/print_color",
    "tools/compass_calibration", "tools/ir_calibrate",
]

[workspace.dependencies]
ufmt = "0.2.0"
embedded-hal = "1.0"
shared-bus = { git = "https://github.com/Sycrosity/shared-bus", rev = "e495929cb39445275058cb57d6559d5f890f98c1" }

[workspace.dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.dev.package.compiler_builtins]
overflow-checks = false

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
