[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false

[dependencies]
libm = "0.2.0"
tcs3472 = { git = "https://github.com/LiamGallagher737/tcs3472-rs.git", rev = "d0b4e5752e9fc8106a1ce956f54dc537ef3d33ac" }
lis3mdl = { git = "https://github.com/LiamGallagher737/lis3mdl.git", rev = "0b213d38e6316b8959ce78926188d5a6ca1e7f9e" }
embedded-hal.workspace = true
ufmt.workspace = true
arduino-hal.workspace = true
