[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false

[dependencies]
avr-device = "0.5.0"
ssd1306 = "0.9.0"
tcs3472 = { git = "https://github.com/LiamGallagher737/tcs3472-rs.git", rev = "f8c99217a3a0ce6405255656d8b41fcad18ddee8" }
lis3mdl = { git = "https://github.com/LiamGallagher737/lis3mdl.git", rev = "0b213d38e6316b8959ce78926188d5a6ca1e7f9e" }
radian.workspace = true
libm.workspace = true
embedded-hal.workspace = true
ufmt.workspace = true
arduino-hal.workspace = true
