[package]
name = "compass_calibration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compass_calibration"
test = false
bench = false

[dependencies]
lis3mdl = { git = "https://github.com/rland93/lis3mdl.git", rev = "0317b9175900292e1e51530d7bccae2e6983ed98" }
ufmt_float = "0.2.0"
panic-halt.workspace = true
ufmt.workspace = true
nb.workspace = true
embedded-hal.workspace = true
arduino-hal.workspace = true

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"
