[package]
name = "i2c_detect"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "i2c_detect"
test = false
bench = false

[dependencies]
lib.path = "../../lib"
ufmt.workspace = true
embedded-hal.workspace = true
arduino-hal.workspace = true

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"
