[package]
name = "print_color"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "print_color"
test = false
bench = false

[dependencies]
lib.path = "../../lib"
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
arduino-hal.workspace = true

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"
